retail-catalogue/target/kubernetes/kubernetes.yml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    app.quarkus.io/commit-id: 8c2eaa62dd92240d47658eb9d818342597b0d240
    app.quarkus.io/build-timestamp: 2022-11-28 - 11:35:50 +0000
  labels:
    app.kubernetes.io/name: retail-store-service
    app.kubernetes.io/version: 1.0.0-SNAPSHOT
  name: retail-store-service
spec:
  ports:
    - name: http
      port: 80
      targetPort: 8080
  selector:
    app.kubernetes.io/name: retail-store-service
    app.kubernetes.io/version: 1.0.0-SNAPSHOT
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    app.quarkus.io/commit-id: 8c2eaa62dd92240d47658eb9d818342597b0d240
    app.quarkus.io/build-timestamp: 2022-11-28 - 11:35:50 +0000
  labels:
    app.kubernetes.io/name: retail-store-service
    app.kubernetes.io/version: 1.0.0-SNAPSHOT
  name: retail-store-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: retail-store-service
      app.kubernetes.io/version: 1.0.0-SNAPSHOT
  template:
    metadata:
      annotations:
        app.quarkus.io/commit-id: 8c2eaa62dd92240d47658eb9d818342597b0d240
        app.quarkus.io/build-timestamp: 2022-11-28 - 11:35:50 +0000
      labels:
        app.kubernetes.io/name: retail-store-service
        app.kubernetes.io/version: 1.0.0-SNAPSHOT
    spec:
      containers:
        - command:
            - java
            - -Dquarkus.http.host=0.0.0.0
            - -Djava.util.logging.manager=org.jboss.logmanager.LogManager
            - -jar
            - /deployments/quarkus-run.jar
          image: org.infinispan/retail-store-service:1.0.0-SNAPSHOT
          imagePullPolicy: Always
          name: retail-store-service
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    app.quarkus.io/commit-id: 8c2eaa62dd92240d47658eb9d818342597b0d240
    app.quarkus.io/build-timestamp: 2022-11-28 - 11:35:50 +0000
  labels:
    app.kubernetes.io/name: retail-store-service
    app.kubernetes.io/version: 1.0.0-SNAPSHOT
  name: retail-store-service
spec:
  rules:
    - http:
        paths:
          - backend:
              service:
                name: retail-store-service
                port:
                  name: http
            path: /
            pathType: Prefix
